// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`xml serializing writes namespace declarations only once when a prefix is defined on an attribute 1`] = `
"<root>
            
  <child xmlns:foo="bar" foo:attr="value"/>
        
</root>
<!-- # sourceMappingURL=out.xml.map -->"
`;

exports[`xml serializing writes namespace declarations only once when a prefix is defined on an attribute even when there are multiple attributes 1`] = `
"<root xmlns:ns2="http://katalysteducation.org/cxlxt/1.0">
      
  <span xmlns:ns2="http://katalysteducation.org/cxlxt/1.0" ns2:index="name" ns2:name="Wearing, Clive" ns2:born="1938"/>
  
</root>
<!-- # sourceMappingURL=out.xml.map -->"
`;
